# syn

./: .env.sample  .gitignore  CLAUDE.md  README.md  architecture.md  data-model.md  generate_sample.py  ground-truth-and-eval.md  open-questions.md  pyproject.toml  requirements.txt  roadmap.md
sow_synth/: claims.py  docplan.py  events.py  export.py  graph.py  ledger.py  llm.py  models.py  ocr.py  profile.py  spec.py  telemetry.py  verify.py
sow_synth/formats/: __init__.py  flavor.py  helpers.py  realize.py  registry.py
sow_synth/formats/templates/correspondence/: email_thread_p1.j2  employer_letter_p1.j2  gift_letter_p1.j2  solicitor_letter_p1.j2
sow_synth/formats/templates/legal/: gift_deed_p1.j2  share_purchase_p1.j2  will_extract_p1.j2
sow_synth/formats/templates/press/: bloomberg_article_p1.j2  companies_house_p1.j2
sow_synth/formats/templates/structured/: bank_statement_p1.j2  bank_transfer_p1.j2  client_history_p1.j2  client_history_p2.j2  company_accounts_p1.j2  distribution_statement_p1.j2  payslip_p1.j2  payslip_p4.j2  probate_grant_p1.j2
sow_synth/render/: client_history.py  doc_structure.py  document.py  realize.py
sow_synth/render/templates/: payslip.j2  payslip_p2.j2  payslip_p3.j2
tests/: test_documents.py  test_invariants.py
